--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "archiver": "^7.0.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.2",
