--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "archiver": "^7.0.1",
     "next": "14.2.5",
     "react": "^18",
